Remove top image from menu

--- a/style.css
+++ b/style.css
@@ -1973,10 +1973,12 @@ body.single-tribe_events .site-inner .tribe-events-event-meta {
 	margin-bottom: 260px;
 }
 
+/*
 .home-template .menu-wrap-inner {
 	padding-top: 190px;
 	background: url(images/graphic-menustamp.png) no-repeat 50% 50px;
 }
+*/
 
 .home-template .menu-bg {
 	margin-bottom: -200px;
